Minizinc läuft -DZN erzeugt Prios haven Fehler beim SAVE